--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    margin: 0px;
+    padding: 0px;
+}
+
 #canvas {
     width: 100%;
     height: 280px;
@@ -20,6 +25,8 @@ padding: 0 5px; */
 
 #drawingLine>input {
     min-height: 100%;
+    margin-left: 16px;
+    margin-right: 16px;
 }
 
 #resumeButton {
